# hifi-wifi

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  config.example.toml  install.sh  package.sh  steamos-prep.sh  uninstall.sh
config/: 99-wifi-upload-opt.conf
docs/: research.md  rewrite.md  v1.3.0-remediation-plan.md
legacy/: uninstall.sh
legacy/config/: 99-wifi-upload-opt.conf
legacy/release_notes/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md
legacy/src/: core.sh  dispatcher.sh
legacy/tests/: realtime-streaming-monitor.sh  test-power-detection.sh  wifi-grader.sh
release_notes/: v1.3.0.md  v3.0.0-beta1.md  v3.0.0-beta2.md  v3.0.0-beta3.md  v3.0.0-beta4.md  v3.0.0-rc1.md
src/: core.sh  desktop-performance.sh  dispatcher.sh  lib.sh  main.rs  power-manager.sh  steamos-restore.sh
src/config/: loader.rs  structs.rs
src/firmware/: deploy.rs  device.rs  download.rs  mod.rs  version.rs
src/network/: backend_tuner.rs  governor.rs  mod.rs  nm.rs  stats.rs  tc.rs  wifi.rs
src/system/: cpu.rs  mod.rs  optimizer.rs  power.rs
src/utils/: logger.rs  mod.rs  privilege.rs
tests/: ab_test.sh  grader.py  run_benchmarks.sh
tests/results/connectivity_check_20260108_215307/: meta.json  mtr_latency.json
tests/results/hifi_20260108_220428/: meta.json  mtr_latency.json
tests/results/stock_20260108_220428/: iperf3_udp.json  meta.json  mtr_latency.json
